syntax = "proto3";

option go_package = "github.com/dvasilas/proteus/internal/proto/mysql";
import "google/protobuf/timestamp.proto";

package mysql;

service PublishUpdates {
    rpc SubscribeToUpdates(stream Request) returns (stream UpdateRecord) {}
}

message UpdateRecord {
    int64 sequence_id = 1;
    string recordID = 2;
    string table = 3;
    repeated Attributes attributes = 4;
    google.protobuf.Timestamp timestamp = 5;
}

message Attributes {
    string Key = 1;
    string ValueOld = 2;
    string ValueNew = 3;
}

message Request {
  oneof val {
    SubRequest request = 1;
    AckMsg ack = 2;
  }
}

message SubRequest {
    google.protobuf.Timestamp timestamp = 1;
    bool sync = 2;
    string table = 3;
}

message AckMsg {
    int64 sequence_id = 1;
}
