syntax = "proto3";

package qpu;
option go_package = "github.com/dvasilas/proteus/internal/proto/qpu";
import "google/protobuf/timestamp.proto";

message LogOperation {
  string object_id = 1;
  string bucket = 2;
  Vectorclock timestamp = 3;
  Payload payload = 4;
}

message Payload {
  message StateDelta {
    ObjectState old = 1;
    ObjectState new = 2;
  }
  oneof val {
    StateDelta delta = 1;
    Operation op = 2;
    ObjectState state = 3;
  }
}

message ObjectState {
  map<string, Value> attributes = 1;
}

message Operation {
  message Update {
    string op_type = 1;
    Value value = 2;
  }
  message Op {
    Attribute attr = 1;
    Update update = 2;
  }
  repeated Op op = 1;
}

message Attribute {
  string attr_key = 1;
  Value value = 3;
}

message Value {
  oneof val {
    string str = 1;
    int64 int = 2;
    double flt = 3;
  }
}

message SnapshotTime {
  enum SnapshotTimeType {
    LATEST = 0;
    ZERO = 1;
    INF = 2;
    VECTORCLOCK = 3;
  }
  SnapshotTimeType type = 1;
  Vectorclock value = 2;
  bool isClosed = 3;
}

message Vectorclock {
  map<string, google.protobuf.Timestamp> vc = 1;
}

message AttributePredicate {
  enum PredicateType {
    ISNULL = 0;
    ISNOTNULL = 1;
    RANGE = 2;
  }
  Attribute attr = 1;
  PredicateType type = 2;
  Value lbound = 3;
  Value ubound = 4;
}

message SnapshotTimePredicate {
  SnapshotTime lbound = 1;
  SnapshotTime ubound = 2;
}